--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,9 @@ Obj/
 
 # Visual Studio 2015 cache/options directory
 .vs/
-/wwwroot/dist/
-/ClientApp/dist/
+/IoT.Cloud.Core.Api/wwwroot/dist/
+/IoT.Cloud.Core.Api/ClientApp/dist/
+node_modules
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
